# vicpinky_carrier

./: .gitignore  LICENSE  README.md  requirements.txt  turtlebot.repos  vicpinky.repos  vicpinky_carrier.repos
.github/workflows/: ros2_ci.yml
ros_packages/camera_stream/: requirements.txt  robot_webrtc.py  start_omx.sh  start_omx_cameras.sh  start_tb3.sh  start_vicpinky.sh
ros_packages/carrier_action_server/: package.xml  setup.cfg  setup.py
ros_packages/carrier_action_server/carrier_action_server/: action_server.py
ros_packages/carrier_msgs/: CMakeLists.txt  package.xml
ros_packages/carrier_msgs/action/: CarrierTask.action
ros_packages/cmd_vel_mux/: cmd_vel_mux.py
ros_packages/dds_config/: fastdds_unicast.xml
ros_packages/domain_bridge/: domain_bridge.yaml  domain_bridge_omx.yaml  domain_bridge_tb3_01.yaml  domain_bridge_tb3_02.yaml  domain_bridge_tb3_03.yaml  domain_bridge_tb3_04.yaml  robot_env.sh  start_domain_bridge.sh  tf_bridge_omx.yaml  tf_bridge_tb3_01.yaml  tf_bridge_tb3_02.yaml  tf_bridge_tb3_03.yaml  tf_bridge_tb3_04.yaml
ros_packages/rmf_nav2_adapter/: README.md  config.yaml  nav2_robot_api.py
src/turtlebot3_explorer/: package.xml  setup.cfg  setup.py
src/turtlebot3_hardware/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/turtlebot3_voice/: package.xml  setup.cfg  setup.py
src/turtlebot_people_tracker/: package.xml  setup.cfg  setup.py
src/turtlebot_status_monitor/: package.xml  setup.cfg  setup.py
src/vicpinky_carrier/: setup.cfg
src/vicpinky_carrier/vicpinky_carrier_hardware/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vicpinky_carrier/vicpinky_carrier_hardware/scripts/: ramp_action_server.py
src/vicpinky_carrier/vicpinky_carrier_hardware/src/: ramp_action_server.py
src/vicpinky_carrier/vicpinky_carrier_hardware/vicpinky_carrier_hardware/: ramp_action_server.py  ramp_driver.py
turtlebot3_hardware/: README.md  package.xml
turtlebot3_hardware/turtlebot3_hardware/: headlight_node.py
web_back/: fastdds_unicast.xml  package.json
web_back/src/: app.module.ts  main.ts
web_back/src/fleet/: edge.schema.ts  (+10 more)
web_front/: package.json
web_front/public/: index.html
web_front/src/: App.tsx  config.ts  index.css
(+86 files in other folders)
