<?xml version="1.0"?>
<package format="3">
  <name>carrier_action_server</name>
  <version>0.1.0</version>
  <description>Action server node for the carrier robot system</description>
  <maintainer email="pjsu94@gmail.com">vicpinky</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>carrier_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
