<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vicpinky_carrier_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zip3366@naver.com">minseok</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>vicpinky_carrier_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
